flat fix submenuwrap

--- a/design/openpa_flat/scss/flat/_responsive.scss
+++ b/design/openpa_flat/scss/flat/_responsive.scss
@@ -222,7 +222,7 @@
       width: $submenu_item_width * 5 + 10px;
     }
     &.items-6{
-      width: ($submenu_item_width - 70px) * 5;
+      width: ($submenu_item_width - 40px) * 5;
       .sub_menu-item{
         width: $submenu_item_width - 70px;
       }
